...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <ImageButton
            android:id="@+id/ibAddCurrency"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="115dp"
            android:background="@null"
            android:backgroundTint="@android:color/transparent"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <Spinner
            android:id="@+id/spCurrencies"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_marginTop="115dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/ibAddCurrency"
            app:layout_constraintHorizontal_bias="0.0"
...
