<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_solid"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_historical"
        android:icon="@drawable/ic_history_solid"
        android:title="@string/title_historical" />

    <item
        android:id="@+id/navigation_calculations"
        android:icon="@drawable/ic_calculator_solid"
        android:title="@string/title_calculations" />

    <item
        android:id="@+id/navigation_currency"
        android:icon="@drawable/ic_currency_solid"
        android:title="@string/title_currency" />

</menu>
